# TRAPD-Agent

./: Cargo.toml  FALCON_READINESS_TODOS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/collectors/: mod.rs
agent/src/collectors/linux/: agent_protect.rs  authlog.rs  ebpf_exec.rs  ebpf_syscalls.rs  filesystem.rs  mod.rs  network.rs  process.rs  system.rs
agent/src/config/: mod.rs
agent/src/enrollment/: mod.rs
agent/src/heartbeat/: mod.rs
agent/src/output/: mod.rs
agent/src/pipeline/: mod.rs  tests.rs
agent/src/prevention/: audit.rs  command_puller.rs  commands.rs  engine.rs  lsm_loader.rs  mod.rs  network.rs  policy.rs  process.rs  quarantine.rs
agent/src/schema/: mod.rs  tests.rs
agent/src/selfprotect/: anti_ptrace.rs  binary_integrity.rs  kernel_hardening.rs  mod.rs  watchdog.rs
agent/src/transport/: mod.rs
deploy/: install.sh  logrotate.conf  trapd-agent.service  trapd.logrotate
trapd-agent-ebpf/: Cargo.toml  rust-toolchain.toml
trapd-agent-ebpf/.cargo/: config.toml
trapd-agent-ebpf/src/: dns.rs  exec.rs  file_manip.rs  file_open.rs  fork.rs  kill.rs  main.rs  mmap.rs  module_load.rs  namespace.rs  network.rs  process_block.rs  ptrace.rs  shm.rs  write.rs
xtask/: Cargo.toml
xtask/src/: main.rs
