[package]
name    = "trapd-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trapd-agent"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait        = "0.1"
uuid               = { version = "1",   features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
hostname           = "0.4"
procfs             = "0.17"
sysinfo            = "0.30"
