[package]
name    = "trapd-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "trapd-agent"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait        = "0.1"
uuid               = { version = "1",   features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
hostname           = "0.4"
procfs             = "0.17"
sysinfo            = "0.30"
reqwest            = { version = "0.12", features = ["json"] }
inotify            = "0.10"
sha2               = "0.10"
hex                = "0.4"

# eBPF userspace loader — Linux only
[target.'cfg(target_os = "linux")'.dependencies]
aya     = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
