[package]
name    = "trapd-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "trapd-agent"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait        = "0.1"
uuid               = { version = "1",   features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
hostname           = "0.4"
procfs             = "0.17"
sysinfo            = "0.30"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
inotify            = "0.10"
rusqlite           = { version = "0.31", features = ["bundled"] }
sha2               = "0.10"
hex                = "0.4"
walkdir            = "2"
ed25519-dalek      = { version = "2", features = ["pkcs8", "pem"] }
base64             = "0.22"
globset            = "0.4"
ipnet              = { version = "2", features = ["serde"] }

# eBPF userspace loader — Linux only.
# Only needed at runtime if the eBPF binary is installed;
# compiles cleanly on all platforms.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
nix = { version = "0.29", default-features = false, features = ["signal", "process", "fs", "user"] }
