[package]
name    = "trapd-agent-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trapd-agent-exec"
path = "src/main.rs"

[dependencies]
aya-ebpf     = { version = "0.1", features = ["macros"] }
aya-log-ebpf = "0.1"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"

[profile.dev]
panic = "abort"
