# Standalone workspace — NOT a member of the root workspace.
# This crate targets bpfel-unknown-none (eBPF kernel programs) and is
# compiled with nightly + bpf-linker via `cargo xtask build-ebpf --release`.
[workspace]

[package]
name    = "trapd-agent-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trapd-agent-exec"
path = "src/main.rs"

[dependencies]
# aya-ebpf 0.1.x exports the procedural macros unconditionally; there is no
# `macros` feature on this crate (it used to live on the older `aya-bpf`).
aya-ebpf     = "0.1"
aya-log-ebpf = "0.1"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"

[profile.dev]
panic = "abort"
